--- a/Views/Container/Crud/Publicaciones/eventos.html
+++ b/Views/Container/Crud/Publicaciones/eventos.html
@@ -8,10 +8,10 @@
         <h1>Registrar evento</h1>
         <form role="form">
 
-            <div class="form-group input-group">
-                <input type="text" class="form-control" placeholder="Nombre Evento">
-                <span class="input-group-btn"><button class="btn btn-default" type="button"><i class="fa fa-barcode"></i></button></span>
-            </div>
+          <div class="form-group input-group">
+              <span class="input-group-addon"><i class="fa fa-hashtag" style="width: 15px;"></i></span>
+              <input type="number" class="form-control" placeholder="Evento" id="1">
+          </div>
 
             <div class="form-group input-group">
                 <input type="text" class="form-control" placeholder="Lugar de Evento">
