--- a/Views/Container/section.html
+++ b/Views/Container/section.html
@@ -7,7 +7,7 @@
                 <h4>Juan David Cardenas</h4>
                 <h4>Juan Esteban Pulgarin</h4>
                 <h4>Alejandro Velez Ortiz</h4>
-                <h4>Ferney Macerlo Correa</h4>
+                <h4>Ferney Marcelo Correa</h4>
 
             </div>
         </div>
