cambios con formularios
hice los formularios de registar entradas y consultar falta verificarlos

--- a/Views/Container/nav.html
+++ b/Views/Container/nav.html
@@ -59,10 +59,10 @@
             <li>
                 <a href="javascript:;" data-toggle="collapse" data-target="#entrada"><i class="fa fa-fw fa-cubes"></i>Entradas<i class="fa fa-fw fa-caret-down"></i></a>
                 <ul id="entrada" class="collapse">
-                    <li id="ent">
+                    <li id="r_ent">
                         <a href="#">Registrar Entrada</a>
                     </li>
-                    <li id="#">
+                    <li id="c_ent">
                         <a href="#">Consultar Entrada</a>
                     </li>
                 </ul>
