Insertar Productos dinamico.
1. Se crean procedimientos almacenados para una mejor consulta.
2. Se elimina la insercion de datos por codigo, se remplaza por valor
autoincrementable.
3. Se añade informacion de la tienda y del proyecto.
4. Se agrega un Query para reiniciar los autoincrementables mediante
codigo.
5. Base de datos actualizada.
6. Se corrigen las condiciones en v_producto.

--- a/Views/Container/Crud/home.html
+++ b/Views/Container/Crud/home.html
@@ -4,4 +4,30 @@
             <h1 class="page-header">Bienvenidos</h1>
         </div>
     </div>
+    <div class="col-lg-6">
+      <p>Proyeco Formativo SENA 2017
+        <br><br>
+        Proyecto en GitHub: <a href="https://github.com/JuanchoSk8/Dashboard">https://github.com/JuanchoSk8/Dashboard</a>
+        <br><br>
+        Integrantes:
+        <br><br>
+        Alejandro Velez Ortiz
+        <br>
+        Ferney Marcelo Correa
+        <br>
+        Juan Esteban Pulgarin
+        <br>
+        Juan David Cardenas
+        <br><br>
+        &copy Rodeo Skateboard
+        <br>
+        Facebook: <a href="https://es-la.facebook.com/rodeoskateboard/">https://es-la.facebook.com/rodeoskateboard/</a>
+        <br>
+        Instagram: <a href="https://www.instagram.com/rodeoskateboard/">https://www.instagram.com/rodeoskateboard/</a>
+        <br>
+        Correo: <a href="mailto:rodeoskateboard@gmail.com">rodeoskateboard@gmail.com</a>
+        <br>
+        Contacto: 3632069 - 3197373967
+      </p>
+    </div>
 </div>
