--- a/Views/Container/section.html
+++ b/Views/Container/section.html
@@ -2,12 +2,34 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Integrantes SK8</h1>
+                <h1 class="page-header">&copy SK8</h1>
 
-                <h4>Juan David Cardenas</h4>
-                <h4>Juan Esteban Pulgarin</h4>
-                <h4>Alejandro Velez Ortiz</h4>
-                <h4>Ferney Marcelo Correa</h4>
+                <div class="col-lg-6">
+                  <p>Proyeco Formativo SENA 2017
+                    <br><br>
+                    Proyecto en GitHub: <a href="https://github.com/JuanchoSk8/Dashboard">https://github.com/JuanchoSk8/Dashboard</a>
+                    <br><br>
+                    Integrantes:
+                    <br><br>
+                    Alejandro Velez Ortiz
+                    <br>
+                    Ferney Marcelo Correa
+                    <br>
+                    Juan Esteban Pulgarin
+                    <br>
+                    Juan David Cardenas
+                    <br><br>
+                    &copy Rodeo Skateboard
+                    <br>
+                    Facebook: <a href="https://es-la.facebook.com/rodeoskateboard/">https://es-la.facebook.com/rodeoskateboard/</a>
+                    <br>
+                    Instagram: <a href="https://www.instagram.com/rodeoskateboard/">https://www.instagram.com/rodeoskateboard/</a>
+                    <br>
+                    Correo: <a href="mailto:rodeoskateboard@gmail.com">rodeoskateboard@gmail.com</a>
+                    <br>
+                    Contacto: 3632069 - 3197373967
+                  </p>
+                </div>
 
             </div>
         </div>
